Improving card model to include verbose balance info, refactoring ports structure